Know how to use vue

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A photo editing application based on the Cropper.js">
     <meta name="author" content="Chen Fengyuan">
-    <title>Photo Editor</title>
+    <title>Photo OCR</title>
     <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="app"></div>
     <script src="https://fengyuanchen.github.io/js/common.js"></script>
+    <script src='https://cdn.jsdelivr.net/gh/naptha/tesseract.js@v1.0.14/dist/tesseract.min.js'></script>
   </body>
 </html>
